# SailorBook

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  GEMINI.md  LICENSE  PRD.md  README.md  VISUAL_READING_TEST_REPORT.md  implementations.md
.claude/: README.md
.claude/agents/: ai-orchestration.md  linting.md  playwright.md  testing.md  ui-ux.md
.claude/config/: mcp-config.json
.claude/features/: 01-flutter-glass-pane-visibility.md
.claude/planning/: 01-flutter-glass-pane-visibility.md  02-test-identifiers-ui-elements.md  03-book-search-integration.md  04-epub-download-storage.md
.claude/specifications/: design-specifications.md  rule-books.md  test-plans.md
.github/workflows/: ci.yml
apps/app_flutter/: README.md  pubspec.yaml
apps/app_flutter/lib/: main.dart
apps/app_flutter/test/: widget_test.dart
apps/app_flutter/web/: index.html  manifest.json
crates/pdreader_core/: Cargo.toml
crates/pdreader_core/src/: lib.rs
crates/pdreader_core/src/epub/: mod.rs  normalizer.rs  parser.rs
crates/pdreader_core/src/manifest/: mod.rs
crates/pdreader_core/src/tts/: engine.rs  mod.rs  voice.rs
planning/: FEATURES.md  PRD.md  implementations.md  prompts.md
planning/features/epub-reader-improvements/: CHANGELOG.md
scripts/: setup.sh  test.sh
tests/playwright/: FAILED_TESTS_ANALYSIS.md  package.json  playwright.config.ts
tests/playwright/setup/: global-setup.ts  global-teardown.ts
tests/playwright/tests/: app-functionality.spec.ts  basic.spec.ts  book-details.spec.ts  browser-download-validation.spec.ts  comprehensive-qa-test.spec.ts  (+28 more)
(+34 files in other folders)
